deliting exerciseId information
from addExercises controller
